fix w3c css validation error

--- a/assets/sass/abstracts/_animations.scss
+++ b/assets/sass/abstracts/_animations.scss
@@ -8,10 +8,10 @@
   animation: $duration bounce $delay ease-in-out;
   @keyframes bounce {
     50% {
-      scale: $scale;
+      transform: scale($scale);
     }
     100% {
-      scale: 1;
+      transform: scale(1);
     }
   }
 }
@@ -30,13 +30,13 @@
   @keyframes spin {
     0% {
       transform: rotate(0deg);
-      scale: 1;
+      transform: scale(1);
     }
     50% {
-      scale: 1.5;
+      transform: scale(1.5);
     }
     100% {
-      scale: 1;
+      transform: scale(1);
       transform: rotate(359deg);
     }
   }
