--- a/assets/sass/base/_fonts.scss
+++ b/assets/sass/base/_fonts.scss
@@ -5,7 +5,6 @@
  * load fonts locally instead of from Google Fonts CDN to avoid FOIT 
  * and avoid google tracking
  * ========================================================================== */
-
 // Shrikhand font
 // https://fonts.google.com/specimen/Shrikhand?query=Shrikhand
 @include mixin.font-face(
@@ -22,7 +21,7 @@
   Roboto,
   "../fonts/roboto/Roboto-Light",
   300,
-  light,
+  normal,
   ttf woff2 woff
 );
 
@@ -30,7 +29,7 @@
   Roboto,
   "../fonts/roboto/Roboto-Medium",
   500,
-  medium,
+  normal,
   ttf woff2 woff
 );
 
@@ -38,7 +37,7 @@
   Roboto,
   "../fonts/roboto/Roboto-Bold",
   700,
-  bold,
+  normal,
   ttf woff2 woff
 );
 
