--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,19 +94,19 @@ select {
 }
 @font-face {
   font-family: "Roboto";
-  font-style: light;
+  font-style: normal;
   font-weight: 300;
   src: url("../fonts/roboto/Roboto-Light.ttf") format("truetype"), url("../fonts/roboto/Roboto-Light.woff2") format("woff2"), url("../fonts/roboto/Roboto-Light.woff") format("woff");
 }
 @font-face {
   font-family: "Roboto";
-  font-style: medium;
+  font-style: normal;
   font-weight: 500;
   src: url("../fonts/roboto/Roboto-Medium.ttf") format("truetype"), url("../fonts/roboto/Roboto-Medium.woff2") format("woff2"), url("../fonts/roboto/Roboto-Medium.woff") format("woff");
 }
 @font-face {
   font-family: "Roboto";
-  font-style: bold;
+  font-style: normal;
   font-weight: 700;
   src: url("../fonts/roboto/Roboto-Bold.ttf") format("truetype"), url("../fonts/roboto/Roboto-Bold.woff2") format("woff2"), url("../fonts/roboto/Roboto-Bold.woff") format("woff");
 }
@@ -371,9 +371,10 @@ h4 {
   display: grid;
   grid-template-columns: 1fr auto;
   padding: 0.75rem 1.125rem;
-  padding: .card-content __like;
-  padding-display: grid;
-  padding-place-content: center;
+}
+.card-content__like {
+  display: grid;
+  place-content: center;
 }
 .card-content__link {
   position: absolute;
@@ -441,11 +442,11 @@ h4 {
   position: relative;
   z-index: 1;
   cursor: pointer;
-  scale: 1;
+  transform: scale(1);
   transition: scale 150ms ease-in-out;
 }
 .like:hover {
-  scale: 1.2;
+  transform: scale(1.2);
 }
 .like__icon {
   grid-column: 1;
@@ -475,10 +476,10 @@ h4 {
 }
 @keyframes bounce {
   50% {
-    scale: 1;
+    transform: scale(1);
   }
   100% {
-    scale: 1;
+    transform: scale(1);
   }
 }
 
@@ -603,13 +604,13 @@ h4 {
 @keyframes spin {
   0% {
     transform: rotate(0deg);
-    scale: 1;
+    transform: scale(1);
   }
   50% {
-    scale: 1.5;
+    transform: scale(1.5);
   }
   100% {
-    scale: 1;
+    transform: scale(1);
     transform: rotate(359deg);
   }
 }
@@ -724,10 +725,10 @@ h4 {
 }
 @keyframes bounce {
   50% {
-    scale: 1.75;
+    transform: scale(1.75);
   }
   100% {
-    scale: 1;
+    transform: scale(1);
   }
 }
 
