--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,7 +443,7 @@ h4 {
   z-index: 1;
   cursor: pointer;
   transform: scale(1);
-  transition: scale 150ms ease-in-out;
+  transition: transform 150ms ease-in-out;
 }
 .like:hover {
   transform: scale(1.2);
