--- a/assets/sass/components/_like.scss
+++ b/assets/sass/components/_like.scss
@@ -25,7 +25,7 @@
   z-index: 1;
   cursor: pointer;
   transform: scale(1);
-  transition: scale 150ms ease-in-out;
+  transition: transform 150ms ease-in-out;
 
   &:hover {
     transform: scale(1.2);
