--- a/assets/sass/abstracts/_animations.scss
+++ b/assets/sass/abstracts/_animations.scss
@@ -25,19 +25,23 @@
   }
 }
 
-@mixin spin($duration: 1s, $delay: 0s) {
-  animation: $duration spin $delay linear infinite;
-  @keyframes spin {
+@mixin loader($duration: 1s, $delay: 0s) {
+  animation: $duration loader $delay linear infinite;
+  @keyframes loader {
     0% {
-      transform: rotate(0deg);
-      transform: scale(1);
+      transform: scale(1) rotate(0deg);
+      opacity: 0.85;
+      filter: blur(0.5rem);
     }
     50% {
-      transform: scale(1.5);
+      transform: scale(1.25) rotate(360deg);
+      opacity: 0.5;
+      filter: blur(1.5rem);
     }
     100% {
-      transform: scale(1);
-      transform: rotate(359deg);
+      transform: scale(1) rotate(720deg);
+      opacity: 0.85;
+      filter: blur(0.5rem);
     }
   }
 }
