fix: cards background

--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -53,6 +53,8 @@ $button-color-background-hover: var.$clr-neutral-100;
 $card-title-font-size: var.$fs-medium;
 $card-title-font-weight: var.$fw-medium;
 
+$card-background-color: var.$clr-neutral-100;
+
 $card-content-padding: var.$space-small var.$space-medium;
 $card-content-font-size: var.$fs-normal;
 
