--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,7 @@ h4 {
   border-radius: 1.125rem;
   overflow: hidden;
   font-size: 1rem;
+  background-color: #ffffff;
   box-shadow: 0 4px 8px hsla(0, 0%, 6%, 0.15);
 }
 @media (hover: hover) {
@@ -740,9 +741,11 @@ h4 {
   text-indent: -100vmax;
   cursor: pointer;
 }
-.menu-option:hover > .menu-option__checkbox {
-  max-width: 2.265625rem;
-  transition: max-width 300ms ease-in-out;
+@media (hover: hover) {
+  .menu-option:hover > .menu-option__checkbox {
+    max-width: 2.265625rem;
+    transition: max-width 300ms ease-in-out;
+  }
 }
 .menu-option > input:checked ~ .menu-option__checkbox {
   max-width: 69px;
